# space-invaders

./: .gitignore  CMakeLists.txt  README.md
include/: Constants.h
include/abstracts/: DamageableEntity.h  RenderableEntity.h  Serializeable.h  ShooterableEntity.h
include/controllers/: BarrierController.h  CollisionController.h  EnemyContoller.h  GameController.h  SoundSystemController.h  StoreGameStateController.h
include/helpers/: DrawText.h  EndGameMenu.h  MainMenu.h
include/models/: Barrier.h  Enemy.h  Player.h  Projectile.h
src/: main.cpp
src/abstracts/: DamageableEntity.cpp  RenderableEntity.cpp  ShooterableEntity.cpp
src/controllers/: BarrierController.cpp  CollisionController.cpp  EnemyContoller.cpp  GameController.cpp  SoundSystemController.cpp  StoreGameStateController.cpp
src/helpers/: DrawText.cpp  EndGameMenu.cpp  MainMenu.cpp
src/models/: Barrier.cpp  Enemy.cpp  Player.cpp  Projectile.cpp
tests/: EnemyTest.cpp  PlayerTest.cpp  master.cpp  test.cpp
